--- a/Emby.Drawing/Emby.Drawing.csproj
+++ b/Emby.Drawing/Emby.Drawing.csproj
@@ -55,6 +55,7 @@
     <Compile Include="..\SharedVersion.cs">
       <Link>Properties\SharedVersion.cs</Link>
     </Compile>
+    <Compile Include="Common\ImageHeader.cs" />
     <Compile Include="GDI\DynamicImageHelpers.cs" />
     <Compile Include="GDI\GDIImageEncoder.cs" />
     <Compile Include="GDI\ImageExtensions.cs" />
