Add store registration endpoint (pointing to test)

--- a/MediaBrowser.ServerApplication/App.config
+++ b/MediaBrowser.ServerApplication/App.config
@@ -12,7 +12,7 @@
     <targets async="true"></targets>
   </nlog>
   <appSettings>
-    <add key="DebugProgramDataPath" value="..\..\..\ProgramData-Server" />
+    <add key="DebugProgramDataPath" value="c:\users\eric\appdata\roaming\mediabrowser-server\" />
     <add key="ReleaseProgramDataPath" value=".." />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
